# sampvoice

./: CMakeLists.txt  README.md  README.ru.md  README.vn.md
client/: CMakeLists.txt  Network.cpp  PluginMenu.h  client.vcxproj  client.vcxproj.filters
client/resources/: resource.h  resource.rc
server/: CMakeLists.txt  server.vcxproj
