set(PROJECT_NAME client)

################################################################################
# Source groups
################################################################################
set(___include
    "include/SPSCQueue.h"
)
source_group("Исходные файлы\\include" FILES ${___include})

set(___include__audio
    "include/audio/bass.h"
    "include/audio/bass_fx.h"
    "include/audio/opus.h"
    "include/audio/opus_custom.h"
    "include/audio/opus_defines.h"
    "include/audio/opus_multistream.h"
    "include/audio/opus_types.h"
)
source_group("Исходные файлы\\include\\audio" FILES ${___include__audio})

set(___include__game
    "include/game/AnimBlendFrameData.h"
    "include/game/C2dEffect.h"
    "include/game/C3dMarker.cpp"
    "include/game/C3dMarker.h"
    "include/game/C3dMarkers.cpp"
    "include/game/C3dMarkers.h"
    "include/game/CAEAudioEntity.cpp"
    "include/game/CAEAudioEntity.h"
    "include/game/CAEExplosionAudioEntity.h"
    "include/game/CAEFireAudioEntity.h"
    "include/game/CAEPedAudioEntity.h"
    "include/game/CAEPedSpeechAudioEntity.h"
    "include/game/CAEPoliceScannerAudioEntity.h"
    "include/game/CAERadioTrackManager.cpp"
    "include/game/CAERadioTrackManager.h"
    "include/game/CAESound.cpp"
    "include/game/CAESound.h"
    "include/game/CAETwinLoopSoundEntity.h"
    "include/game/CAEVehicleAudioEntity.h"
    "include/game/CAEWeaponAudioEntity.cpp"
    "include/game/CAEWeaponAudioEntity.h"
    "include/game/CAEWeatherAudioEntity.cpp"
    "include/game/CAEWeatherAudioEntity.h"
    "include/game/CAnimatedBuilding.cpp"
    "include/game/CAnimatedBuilding.h"
    "include/game/CAnimationStyleDescriptor.h"
    "include/game/CAnimBlendAssocGroup.cpp"
    "include/game/CAnimBlendAssocGroup.h"
    "include/game/CAnimBlendAssociation.cpp"
    "include/game/CAnimBlendAssociation.h"
    "include/game/CAnimBlendClumpData.h"
    "include/game/CAnimBlendHierarchy.cpp"
    "include/game/CAnimBlendHierarchy.h"
    "include/game/CAnimBlendNode.cpp"
    "include/game/CAnimBlendNode.h"
    "include/game/CAnimBlendSequence.cpp"
    "include/game/CAnimBlendSequence.h"
    "include/game/CAnimBlendStaticAssociation.cpp"
    "include/game/CAnimBlendStaticAssociation.h"
    "include/game/CAnimBlock.h"
    "include/game/CAnimManager.cpp"
    "include/game/CAnimManager.h"
    "include/game/CAtomicModelInfo.cpp"
    "include/game/CAtomicModelInfo.h"
    "include/game/CAttractorScanner.h"
    "include/game/CAutomobile.cpp"
    "include/game/CAutomobile.h"
    "include/game/CAutoPilot.h"
    "include/game/CBaseModelInfo.cpp"
    "include/game/CBaseModelInfo.h"
    "include/game/CBike.cpp"
    "include/game/CBike.h"
    "include/game/CBirds.cpp"
    "include/game/CBirds.h"
    "include/game/CBmx.cpp"
    "include/game/CBmx.h"
    "include/game/CBoat.cpp"
    "include/game/CBoat.h"
    "include/game/CBouncingPanel.cpp"
    "include/game/CBouncingPanel.h"
    "include/game/CBoundingBox.cpp"
    "include/game/CBoundingBox.h"
    "include/game/CBox.cpp"
    "include/game/CBox.h"
    "include/game/CBrightLights.cpp"
    "include/game/CBrightLights.h"
    "include/game/CBuilding.cpp"
    "include/game/CBuilding.h"
    "include/game/CBulletInfo.cpp"
    "include/game/CBulletInfo.h"
    "include/game/CBulletTrace.cpp"
    "include/game/CBulletTrace.h"
    "include/game/CBulletTraces.cpp"
    "include/game/CBulletTraces.h"
    "include/game/CCam.h"
    "include/game/CCamera.cpp"
    "include/game/CCamera.h"
    "include/game/CCamPathSplines.h"
    "include/game/CCarAI.cpp"
    "include/game/CCarAI.h"
    "include/game/CCarCtrl.cpp"
    "include/game/CCarCtrl.h"
    "include/game/CCarEnterExit.cpp"
    "include/game/CCarEnterExit.h"
    "include/game/CCarGenerator.cpp"
    "include/game/CCarGenerator.h"
    "include/game/CCheat.cpp"
    "include/game/CCheat.h"
    "include/game/CCheckpoint.cpp"
    "include/game/CCheckpoint.h"
    "include/game/CCheckpoints.cpp"
    "include/game/CCheckpoints.h"
    "include/game/CCivilianPed.cpp"
    "include/game/CCivilianPed.h"
    "include/game/CClock.cpp"
    "include/game/CClock.h"
    "include/game/CClothes.cpp"
    "include/game/CClothes.h"
    "include/game/CClothesBuilder.cpp"
    "include/game/CClothesBuilder.h"
    "include/game/CClouds.cpp"
    "include/game/CClouds.h"
    "include/game/CClumpModelInfo.cpp"
    "include/game/CClumpModelInfo.h"
    "include/game/CColBox.cpp"
    "include/game/CColBox.h"
    "include/game/CColDisk.cpp"
    "include/game/CColDisk.h"
    "include/game/CColLine.cpp"
    "include/game/CColLine.h"
    "include/game/CCollision.cpp"
    "include/game/CCollision.h"
    "include/game/CCollisionData.cpp"
    "include/game/CCollisionData.h"
    "include/game/CColModel.cpp"
    "include/game/CColModel.h"
    "include/game/CColourSet.cpp"
    "include/game/CColourSet.h"
    "include/game/CColPoint.cpp"
    "include/game/CColPoint.h"
    "include/game/CColSphere.cpp"
    "include/game/CColSphere.h"
    "include/game/CColTriangle.cpp"
    "include/game/CColTriangle.h"
    "include/game/CColTrianglePlane.cpp"
    "include/game/CColTrianglePlane.h"
    "include/game/CControllerConfigManager.cpp"
    "include/game/CControllerConfigManager.h"
    "include/game/CCopPed.cpp"
    "include/game/CCopPed.h"
    "include/game/CCoronas.cpp"
    "include/game/CCoronas.h"
    "include/game/CCredits.cpp"
    "include/game/CCredits.h"
    "include/game/CCreepingFire.cpp"
    "include/game/CCreepingFire.h"
    "include/game/CCrimeBeingQd.h"
    "include/game/CCustomCarEnvMapPipeline.cpp"
    "include/game/CCustomCarEnvMapPipeline.h"
    "include/game/CCustomCarPlateMgr.cpp"
    "include/game/CCustomCarPlateMgr.h"
    "include/game/CCutsceneMgr.cpp"
    "include/game/CCutsceneMgr.h"
    "include/game/CCutsceneObject.cpp"
    "include/game/CCutsceneObject.h"
    "include/game/CDamageManager.cpp"
    "include/game/CDamageManager.h"
    "include/game/CDarkel.cpp"
    "include/game/CDarkel.h"
    "include/game/CDecision.cpp"
    "include/game/CDecision.h"
    "include/game/CDecisionMaker.h"
    "include/game/CDecisionSimple.cpp"
    "include/game/CDecisionSimple.h"
    "include/game/CDirectory.cpp"
    "include/game/CDirectory.h"
    "include/game/CDoor.cpp"
    "include/game/CDoor.h"
    "include/game/CDraw.cpp"
    "include/game/CDraw.h"
    "include/game/CDummy.cpp"
    "include/game/CDummy.h"
    "include/game/CDummyObject.cpp"
    "include/game/CDummyObject.h"
    "include/game/CDummyPed.cpp"
    "include/game/CDummyPed.h"
    "include/game/CEmergencyPed.cpp"
    "include/game/CEmergencyPed.h"
    "include/game/CEntity.cpp"
    "include/game/CEntity.h"
    "include/game/CEntityScanner.h"
    "include/game/CEntryExit.cpp"
    "include/game/CEntryExit.h"
    "include/game/CEntryExitManager.cpp"
    "include/game/CEntryExitManager.h"
    "include/game/CEventGroup.h"
    "include/game/CEventHandler.h"
    "include/game/CEventScanner.h"
    "include/game/CExplosion.cpp"
    "include/game/CExplosion.h"
    "include/game/CFileLoader.cpp"
    "include/game/CFileLoader.h"
    "include/game/CFileMgr.cpp"
    "include/game/CFileMgr.h"
    "include/game/CFileObjectInstance.h"
    "include/game/CFire.cpp"
    "include/game/CFire.h"
    "include/game/CFireManager.cpp"
    "include/game/CFireManager.h"
    "include/game/CFont.cpp"
    "include/game/CFont.h"
    "include/game/CGame.cpp"
    "include/game/CGame.h"
    "include/game/CGamma.cpp"
    "include/game/CGamma.h"
    "include/game/CGarages.cpp"
    "include/game/CGarages.h"
    "include/game/CGeneral.cpp"
    "include/game/CGeneral.h"
    "include/game/cHandlingDataMgr.cpp"
    "include/game/cHandlingDataMgr.h"
    "include/game/CHandObject.cpp"
    "include/game/CHandObject.h"
    "include/game/CHeli.cpp"
    "include/game/CHeli.h"
    "include/game/CHud.cpp"
    "include/game/CHud.h"
    "include/game/CHudColours.cpp"
    "include/game/CHudColours.h"
    "include/game/CIniFile.cpp"
    "include/game/CIniFile.h"
    "include/game/CIplStore.cpp"
    "include/game/CIplStore.h"
    "include/game/CKeyGen.cpp"
    "include/game/CKeyGen.h"
    "include/game/CLink.h"
    "include/game/CLinkList.h"
    "include/game/CLoadedCarGroup.cpp"
    "include/game/CLoadedCarGroup.h"
    "include/game/CLoadingScreen.cpp"
    "include/game/CLoadingScreen.h"
    "include/game/CLocalisation.cpp"
    "include/game/CLocalisation.h"
    "include/game/CMatrix.cpp"
    "include/game/CMatrix.h"
    "include/game/CMatrixLink.cpp"
    "include/game/CMatrixLink.h"
    "include/game/CMenuManager.cpp"
    "include/game/CMenuManager.h"
    "include/game/CMenuSystem.cpp"
    "include/game/CMenuSystem.h"
    "include/game/CMessages.cpp"
    "include/game/CMessages.h"
    "include/game/CMirrors.cpp"
    "include/game/CMirrors.h"
    "include/game/CMissionCleanup.cpp"
    "include/game/CMissionCleanup.h"
    "include/game/CModelInfo.cpp"
    "include/game/CModelInfo.h"
    "include/game/CModelInfoAccelerator.cpp"
    "include/game/CModelInfoAccelerator.h"
    "include/game/CMonsterTruck.cpp"
    "include/game/CMonsterTruck.h"
    "include/game/CMotionBlurStreaks.cpp"
    "include/game/CMotionBlurStreaks.h"
    "include/game/CNodeAddress.h"
    "include/game/CObject.cpp"
    "include/game/CObject.h"
    "include/game/CObjectInfo.h"
    "include/game/COctTree.cpp"
    "include/game/COctTree.h"
    "include/game/COctTreeBase.cpp"
    "include/game/COctTreeBase.h"
    "include/game/common.cpp"
    "include/game/common.h"
    "include/game/CompressedVector.cpp"
    "include/game/CompressedVector.h"
    "include/game/COnscreenTimer.h"
    "include/game/CPad.cpp"
    "include/game/CPad.h"
    "include/game/CPathFind.cpp"
    "include/game/CPathFind.h"
    "include/game/CPed.cpp"
    "include/game/CPed.h"
    "include/game/CPedAcquaintance.h"
    "include/game/CPedClothesDesc.cpp"
    "include/game/CPedClothesDesc.h"
    "include/game/CPedIK.cpp"
    "include/game/CPedIK.h"
    "include/game/CPedIntelligence.cpp"
    "include/game/CPedIntelligence.h"
    "include/game/CPedModelInfo.cpp"
    "include/game/CPedModelInfo.h"
    "include/game/CPhysical.cpp"
    "include/game/CPhysical.h"
    "include/game/CPickup.cpp"
    "include/game/CPickup.h"
    "include/game/CPickups.cpp"
    "include/game/CPickups.h"
    "include/game/CPlaceable.cpp"
    "include/game/CPlaceable.h"
    "include/game/CPlane.cpp"
    "include/game/CPlane.h"
    "include/game/CPlaneTrail.cpp"
    "include/game/CPlaneTrail.h"
    "include/game/CPlaneTrails.cpp"
    "include/game/CPlaneTrails.h"
    "include/game/CPlayerData.h"
    "include/game/CPlayerInfo.h"
    "include/game/CPlayerPed.cpp"
    "include/game/CPlayerPed.h"
    "include/game/CPointLights.cpp"
    "include/game/CPointLights.h"
    "include/game/CPolyBunch.cpp"
    "include/game/CPolyBunch.h"
    "include/game/CPool.h"
    "include/game/CPools.cpp"
    "include/game/CPools.h"
    "include/game/CPopCycle.cpp"
    "include/game/CPopCycle.h"
    "include/game/CPopulation.cpp"
    "include/game/CPopulation.h"
    "include/game/CProjectile.cpp"
    "include/game/CProjectile.h"
    "include/game/CProjectileInfo.cpp"
    "include/game/CProjectileInfo.h"
    "include/game/CPtrList.cpp"
    "include/game/CPtrList.h"
    "include/game/CPtrListDoubleLink.cpp"
    "include/game/CPtrListDoubleLink.h"
    "include/game/CPtrListSingleLink.cpp"
    "include/game/CPtrListSingleLink.h"
    "include/game/CPtrNode.h"
    "include/game/CPtrNodeDoubleLink.cpp"
    "include/game/CPtrNodeDoubleLink.h"
    "include/game/CPtrNodeSingleLink.cpp"
    "include/game/CPtrNodeSingleLink.h"
    "include/game/CQuadBike.cpp"
    "include/game/CQuadBike.h"
    "include/game/CQuadTreeNode.cpp"
    "include/game/CQuadTreeNode.h"
    "include/game/CQuaternion.cpp"
    "include/game/CQuaternion.h"
    "include/game/CQueuedMode.h"
    "include/game/CRadar.cpp"
    "include/game/CRadar.h"
    "include/game/CRealTimeShadow.cpp"
    "include/game/CRealTimeShadow.h"
    "include/game/CRect.cpp"
    "include/game/CRect.h"
    "include/game/CReference.h"
    "include/game/CReferences.cpp"
    "include/game/CReferences.h"
    "include/game/CRegisteredCorona.cpp"
    "include/game/CRegisteredCorona.h"
    "include/game/CRegisteredMotionBlurStreak.cpp"
    "include/game/CRegisteredMotionBlurStreak.h"
    "include/game/CRenderer.cpp"
    "include/game/CRenderer.h"
    "include/game/CRepeatSector.h"
    "include/game/CRestart.cpp"
    "include/game/CRestart.h"
    "include/game/CRGBA.cpp"
    "include/game/CRGBA.h"
    "include/game/CRideAnimData.h"
    "include/game/CRope.cpp"
    "include/game/CRope.h"
    "include/game/CRopes.cpp"
    "include/game/CRopes.h"
    "include/game/CRunningScript.cpp"
    "include/game/CRunningScript.h"
    "include/game/CScene.cpp"
    "include/game/CScene.h"
    "include/game/CSector.h"
    "include/game/CSetPiece.cpp"
    "include/game/CSetPiece.h"
    "include/game/CSetPieces.cpp"
    "include/game/CSetPieces.h"
    "include/game/CShadowCamera.cpp"
    "include/game/CShadowCamera.h"
    "include/game/CShadows.cpp"
    "include/game/CShadows.h"
    "include/game/CShinyTexts.cpp"
    "include/game/CShinyTexts.h"
    "include/game/CShotInfo.cpp"
    "include/game/CShotInfo.h"
    "include/game/CSimpleTransform.cpp"
    "include/game/CSimpleTransform.h"
    "include/game/CSpecialFX.cpp"
    "include/game/CSpecialFX.h"
    "include/game/CSpecialPlateHandler.cpp"
    "include/game/CSpecialPlateHandler.h"
    "include/game/CSphere.cpp"
    "include/game/CSphere.h"
    "include/game/CSprite.cpp"
    "include/game/CSprite.h"
    "include/game/CSprite2d.cpp"
    "include/game/CSprite2d.h"
    "include/game/CStats.cpp"
    "include/game/CStats.h"
    "include/game/CStore.h"
    "include/game/CStoredCollPoly.h"
    "include/game/CStreaming.cpp"
    "include/game/CStreaming.h"
    "include/game/CStreamingInfo.cpp"
    "include/game/CStreamingInfo.h"
    "include/game/CTask.cpp"
    "include/game/CTask.h"
    "include/game/CTaskComplex.cpp"
    "include/game/CTaskComplex.h"
    "include/game/CTaskComplexCopInCar.cpp"
    "include/game/CTaskComplexCopInCar.h"
    "include/game/CTaskComplexDie.cpp"
    "include/game/CTaskComplexDie.h"
    "include/game/CTaskComplexEnterBoatAsDriver.cpp"
    "include/game/CTaskComplexEnterBoatAsDriver.h"
    "include/game/CTaskComplexEnterCar.cpp"
    "include/game/CTaskComplexEnterCar.h"
    "include/game/CTaskComplexEnterCarAsDriver.cpp"
    "include/game/CTaskComplexEnterCarAsDriver.h"
    "include/game/CTaskComplexEnterCarAsPassenger.cpp"
    "include/game/CTaskComplexEnterCarAsPassenger.h"
    "include/game/CTaskComplexFacial.cpp"
    "include/game/CTaskComplexFacial.h"
    "include/game/CTaskComplexKillPedFromBoat.cpp"
    "include/game/CTaskComplexKillPedFromBoat.h"
    "include/game/CTaskComplexKillPedOnFoot.cpp"
    "include/game/CTaskComplexKillPedOnFoot.h"
    "include/game/CTaskComplexLeaveCar.cpp"
    "include/game/CTaskComplexLeaveCar.h"
    "include/game/CTaskComplexPlayHandSignalAnim.cpp"
    "include/game/CTaskComplexPlayHandSignalAnim.h"
    "include/game/CTaskComplexProstituteSolicit.cpp"
    "include/game/CTaskComplexProstituteSolicit.h"
    "include/game/CTaskComplexSunbathe.cpp"
    "include/game/CTaskComplexSunbathe.h"
    "include/game/CTaskComplexUseMobilePhone.cpp"
    "include/game/CTaskComplexUseMobilePhone.h"
    "include/game/CTaskComplexWander.cpp"
    "include/game/CTaskComplexWander.h"
    "include/game/CTaskComplexWanderStandard.cpp"
    "include/game/CTaskComplexWanderStandard.h"
    "include/game/CTaskManager.cpp"
    "include/game/CTaskManager.h"
    "include/game/CTaskSimple.cpp"
    "include/game/CTaskSimple.h"
    "include/game/CTaskSimpleAnim.cpp"
    "include/game/CTaskSimpleAnim.h"
    "include/game/CTaskSimpleCarSetPedInAsDriver.cpp"
    "include/game/CTaskSimpleCarSetPedInAsDriver.h"
    "include/game/CTaskSimpleCarSetPedInAsPassenger.cpp"
    "include/game/CTaskSimpleCarSetPedInAsPassenger.h"
    "include/game/CTaskSimpleCarSetPedOut.cpp"
    "include/game/CTaskSimpleCarSetPedOut.h"
    "include/game/CTaskSimpleChoking.cpp"
    "include/game/CTaskSimpleChoking.h"
    "include/game/CTaskSimpleClimb.cpp"
    "include/game/CTaskSimpleClimb.h"
    "include/game/CTaskSimpleDuck.cpp"
    "include/game/CTaskSimpleDuck.h"
    "include/game/CTaskSimpleFacial.cpp"
    "include/game/CTaskSimpleFacial.h"
    "include/game/CTaskSimpleFight.cpp"
    "include/game/CTaskSimpleFight.h"
    "include/game/CTaskSimpleGangDriveBy.cpp"
    "include/game/CTaskSimpleGangDriveBy.h"
    "include/game/CTaskSimpleHoldEntity.cpp"
    "include/game/CTaskSimpleHoldEntity.h"
    "include/game/CTaskSimpleIKChain.cpp"
    "include/game/CTaskSimpleIKChain.h"
    "include/game/CTaskSimpleIKLookAt.cpp"
    "include/game/CTaskSimpleIKLookAt.h"
    "include/game/CTaskSimpleIKManager.cpp"
    "include/game/CTaskSimpleIKManager.h"
    "include/game/CTaskSimpleInAir.cpp"
    "include/game/CTaskSimpleInAir.h"
    "include/game/CTaskSimpleJetPack.cpp"
    "include/game/CTaskSimpleJetpack.h"
    "include/game/CTaskSimplePlayerOnFoot.cpp"
    "include/game/CTaskSimplePlayerOnFoot.h"
    "include/game/CTaskSimpleRunAnim.cpp"
    "include/game/CTaskSimpleRunAnim.h"
    "include/game/CTaskSimpleRunNamedAnim.cpp"
    "include/game/CTaskSimpleRunNamedAnim.h"
    "include/game/CTaskSimpleStandStill.cpp"
    "include/game/CTaskSimpleStandStill.h"
    "include/game/CTaskSimpleStealthKill.cpp"
    "include/game/CTaskSimpleStealthKill.h"
    "include/game/CTaskSimpleSwim.cpp"
    "include/game/CTaskSimpleSwim.h"
    "include/game/CTaskSimpleThrowProjectile.cpp"
    "include/game/CTaskSimpleThrowProjectile.h"
    "include/game/CTaskSimpleTriggerLookAt.cpp"
    "include/game/CTaskSimpleTriggerLookAt.h"
    "include/game/CTaskSimpleUseGun.cpp"
    "include/game/CTaskSimpleUseGun.h"
    "include/game/CTaskTimer.cpp"
    "include/game/CTaskTimer.h"
    "include/game/CTaskUtilityLineUpPedWithCar.cpp"
    "include/game/CTaskUtilityLineUpPedWithCar.h"
    "include/game/CText.cpp"
    "include/game/CText.h"
    "include/game/CTheCarGenerators.cpp"
    "include/game/CTheCarGenerators.h"
    "include/game/CTheScripts.cpp"
    "include/game/CTheScripts.h"
    "include/game/CTheZones.cpp"
    "include/game/CTheZones.h"
    "include/game/CTimeCycle.cpp"
    "include/game/CTimeCycle.h"
    "include/game/CTimeCycleBox.h"
    "include/game/CTimeModelInfo.cpp"
    "include/game/CTimeModelInfo.h"
    "include/game/CTimer.cpp"
    "include/game/CTimer.h"
    "include/game/CTrailer.cpp"
    "include/game/CTrailer.h"
    "include/game/CTrain.cpp"
    "include/game/CTrain.h"
    "include/game/CTrainNode.cpp"
    "include/game/CTrainNode.h"
    "include/game/cTransmission.cpp"
    "include/game/cTransmission.h"
    "include/game/CTxdStore.cpp"
    "include/game/CTxdStore.h"
    "include/game/CUserDisplay.cpp"
    "include/game/CUserDisplay.h"
    "include/game/CVector.cpp"
    "include/game/CVector.h"
    "include/game/CVector2D.cpp"
    "include/game/CVector2D.h"
    "include/game/CVehicle.cpp"
    "include/game/CVehicle.h"
    "include/game/CVehicleModelInfo.cpp"
    "include/game/CVehicleModelInfo.h"
    "include/game/CVisibilityPlugins.cpp"
    "include/game/CVisibilityPlugins.h"
    "include/game/CWanted.cpp"
    "include/game/CWanted.h"
    "include/game/CWeapon.cpp"
    "include/game/CWeapon.h"
    "include/game/CWeaponEffects.cpp"
    "include/game/CWeaponEffects.h"
    "include/game/CWeaponInfo.cpp"
    "include/game/CWeaponInfo.h"
    "include/game/CWeaponModelInfo.cpp"
    "include/game/CWeaponModelInfo.h"
    "include/game/CWeather.cpp"
    "include/game/CWeather.h"
    "include/game/CWorld.cpp"
    "include/game/CWorld.h"
    "include/game/CZone.cpp"
    "include/game/CZone.h"
    "include/game/CZoneInfo.h"
    "include/game/D3DIndexDataBuffer.cpp"
    "include/game/D3DIndexDataBuffer.h"
    "include/game/D3DResourceSystem.cpp"
    "include/game/D3DResourceSystem.h"
    "include/game/D3DTextureBuffer.cpp"
    "include/game/D3DTextureBuffer.h"
    "include/game/eAudioEvents.h"
    "include/game/eCamMode.h"
    "include/game/eClothesModelPart.h"
    "include/game/eClothesTexturePart.h"
    "include/game/eCopType.h"
    "include/game/eCrimeType.h"
    "include/game/eDecisionMakerEvents.h"
    "include/game/eEntityStatus.h"
    "include/game/eEntityType.h"
    "include/game/eEventType.h"
    "include/game/eModelID.h"
    "include/game/ePadButtons.h"
    "include/game/ePedAnims.h"
    "include/game/ePedBones.h"
    "include/game/ePedModel.h"
    "include/game/ePedPieceTypes.h"
    "include/game/ePedState.h"
    "include/game/ePedType.h"
    "include/game/eScriptCommands.h"
    "include/game/eSprintType.h"
    "include/game/eStatModAbilities.h"
    "include/game/eStats.h"
    "include/game/eStatsReactions.h"
    "include/game/eSurfaceType.h"
    "include/game/eTaskType.h"
    "include/game/eVehicleHandlingFlags.h"
    "include/game/eVehicleHandlingModelFlags.h"
    "include/game/eWeaponFire.h"
    "include/game/eWeaponFlags.h"
    "include/game/eWeaponModel.h"
    "include/game/eWeaponType.h"
    "include/game/eWinchType.h"
    "include/game/Fx_c.cpp"
    "include/game/Fx_c.h"
    "include/game/FxBox_c.cpp"
    "include/game/FxBox_c.h"
    "include/game/FxEmitterBP_c.h"
    "include/game/FxFrustumInfo_c.cpp"
    "include/game/FxFrustumInfo_c.h"
    "include/game/FxInfoManager_c.h"
    "include/game/FxManager_c.cpp"
    "include/game/FxManager_c.h"
    "include/game/FxMemoryPool_c.cpp"
    "include/game/FxMemoryPool_c.h"
    "include/game/FxPlane_c.cpp"
    "include/game/FxPlane_c.h"
    "include/game/FxPrimBP_c.h"
    "include/game/FxPrtMult_c.cpp"
    "include/game/FxPrtMult_c.h"
    "include/game/FxSphere_c.cpp"
    "include/game/FxSphere_c.h"
    "include/game/FxSystem_c.cpp"
    "include/game/FxSystem_c.h"
    "include/game/FxSystemBP_c.cpp"
    "include/game/FxSystemBP_c.h"
    "include/game/IplDef.h"
    "include/game/JPegCompress.cpp"
    "include/game/JPegCompress.h"
    "include/game/List_c.cpp"
    "include/game/List_c.h"
    "include/game/ListItem_c.cpp"
    "include/game/ListItem_c.h"
    "include/game/NodeName.cpp"
    "include/game/NodeName.h"
    "include/game/PipelinePlugin.cpp"
    "include/game/PipelinePlugin.h"
    "include/game/PluginBase.h"
    "include/game/RenderWare.cpp"
    "include/game/RenderWare.h"
    "include/game/RpHAnimBlendInterpFrame.h"
    "include/game/RwObjectNameIdAssocation.h"
    "include/game/SArray.h"
    "include/game/tBikeHandlingData.h"
    "include/game/tBinaryIplFile.h"
    "include/game/tBoatHandlingData.h"
    "include/game/tFlyingHandlingData.h"
    "include/game/tHandlingData.h"
    "include/game/tPickupMessage.h"
    "include/game/tTransmissionGear.h"
    "include/game/TxdDef.cpp"
    "include/game/TxdDef.h"
)
source_group("Исходные файлы\\include\\game" FILES ${___include__game})

set(___include__game__rw
    "include/game/rw/errcom.def"
    "include/game/rw/errcore.def"
    "include/game/rw/rpcriter.h"
    "include/game/rw/rperror.h"
    "include/game/rw/rphanim.h"
    "include/game/rw/rpmatfx.h"
    "include/game/rw/rpskin.h"
    "include/game/rw/rpuvanim.h"
    "include/game/rw/rpworld.h"
    "include/game/rw/rtanim.h"
    "include/game/rw/rtdict.h"
    "include/game/rw/rtquat.h"
    "include/game/rw/rwcore.h"
    "include/game/rw/rwplcore.h"
    "include/game/rw/skeleton.h"
)
source_group("Исходные файлы\\include\\game\\rw" FILES ${___include__game__rw})

set(___include__imgui
    "include/imgui/imconfig.h"
    "include/imgui/imgui.cpp"
    "include/imgui/imgui.h"
    "include/imgui/imgui_demo.cpp"
    "include/imgui/imgui_draw.cpp"
    "include/imgui/imgui_impl_dx9.cpp"
    "include/imgui/imgui_impl_dx9.h"
    "include/imgui/imgui_impl_win32.cpp"
    "include/imgui/imgui_impl_win32.h"
    "include/imgui/imgui_internal.h"
    "include/imgui/imgui_widgets.cpp"
    "include/imgui/imstb_rectpack.h"
    "include/imgui/imstb_textedit.h"
    "include/imgui/imstb_truetype.h"
)
source_group("Исходные файлы\\include\\imgui" FILES ${___include__imgui})

set(___include__raknet
    "include/raknet/bitstream.cpp"
    "include/raknet/bitstream.h"
    "include/raknet/rakclient.h"
)
source_group("Исходные файлы\\include\\raknet" FILES ${___include__raknet})

set(___include__samp
    "include/samp/AimStuff.cpp"
    "include/samp/AimStuff.h"
    "include/samp/Animation.h"
    "include/samp/CActor.cpp"
    "include/samp/CActor.h"
    "include/samp/CActorPool.cpp"
    "include/samp/CActorPool.h"
    "include/samp/CAudio.cpp"
    "include/samp/CAudio.h"
    "include/samp/CAudioStream.cpp"
    "include/samp/CAudioStream.h"
    "include/samp/CCameraSA.cpp"
    "include/samp/CCameraSA.h"
    "include/samp/CChat.cpp"
    "include/samp/CChat.h"
    "include/samp/CChatBubble.cpp"
    "include/samp/CChatBubble.h"
    "include/samp/CConfig.cpp"
    "include/samp/CConfig.h"
    "include/samp/CDeathWindow.cpp"
    "include/samp/CDeathWindow.h"
    "include/samp/CDialog.cpp"
    "include/samp/CDialog.h"
    "include/samp/CEntitySA.cpp"
    "include/samp/CEntitySA.h"
    "include/samp/CFont.cpp"
    "include/samp/CFont.h"
    "include/samp/CFonts.cpp"
    "include/samp/CFonts.h"
    "include/samp/CGameSA.cpp"
    "include/samp/CGameSA.h"
    "include/samp/CGangZonePool.cpp"
    "include/samp/CGangZonePool.h"
    "include/samp/CHelpDialog.cpp"
    "include/samp/CHelpDialog.h"
    "include/samp/CHttpClient.cpp"
    "include/samp/CHttpClient.h"
    "include/samp/CInput.cpp"
    "include/samp/CInput.h"
    "include/samp/CLabel.cpp"
    "include/samp/CLabel.h"
    "include/samp/CLabelPool.cpp"
    "include/samp/CLabelPool.h"
    "include/samp/CLicensePlate.cpp"
    "include/samp/CLicensePlate.h"
    "include/samp/CLocalPlayer.cpp"
    "include/samp/CLocalPlayer.h"
    "include/samp/CMatrixSA.h"
    "include/samp/CMenu.cpp"
    "include/samp/CMenu.h"
    "include/samp/CMenuPool.cpp"
    "include/samp/CMenuPool.h"
    "include/samp/CNetGame.cpp"
    "include/samp/CNetGame.h"
    "include/samp/CNetStats.cpp"
    "include/samp/CNetStats.h"
    "include/samp/CObjectMaterialText.cpp"
    "include/samp/CObjectMaterialText.h"
    "include/samp/CObjectPool.cpp"
    "include/samp/CObjectPool.h"
    "include/samp/CObjectSA.cpp"
    "include/samp/CObjectSA.h"
    "include/samp/CObjectSelection.cpp"
    "include/samp/CObjectSelection.h"
    "include/samp/Commands.cpp"
    "include/samp/Commands.h"
    "include/samp/commonSA.cpp"
    "include/samp/commonSA.h"
    "include/samp/ControllerState.h"
    "include/samp/CPedSA.cpp"
    "include/samp/CPedSA.h"
    "include/samp/CPickupPool.cpp"
    "include/samp/CPickupPool.h"
    "include/samp/CPlayerInfo.cpp"
    "include/samp/CPlayerInfo.h"
    "include/samp/CPlayerPool.cpp"
    "include/samp/CPlayerPool.h"
    "include/samp/CPlayerTags.cpp"
    "include/samp/CPlayerTags.h"
    "include/samp/CRectSA.cpp"
    "include/samp/CRectSA.h"
    "include/samp/CRemotePlayer.cpp"
    "include/samp/CRemotePlayer.h"
    "include/samp/CScoreboard.cpp"
    "include/samp/CScoreboard.h"
    "include/samp/CSpawnScreen.cpp"
    "include/samp/CSpawnScreen.h"
    "include/samp/CSrvNetStats.cpp"
    "include/samp/CSrvNetStats.h"
    "include/samp/CTextDraw.cpp"
    "include/samp/CTextDraw.h"
    "include/samp/CTextDrawPool.cpp"
    "include/samp/CTextDrawPool.h"
    "include/samp/CTextDrawSelection.cpp"
    "include/samp/CTextDrawSelection.h"
    "include/samp/CVectorSA.cpp"
    "include/samp/CVectorSA.h"
    "include/samp/CVehiclePool.cpp"
    "include/samp/CVehiclePool.h"
    "include/samp/CVehicleSA.cpp"
    "include/samp/CVehicleSA.h"
    "include/samp/Debug.cpp"
    "include/samp/Debug.h"
    "include/samp/DebugScript.cpp"
    "include/samp/DebugScript.h"
    "include/samp/Exception.cpp"
    "include/samp/Exception.h"
    "include/samp/GUI.cpp"
    "include/samp/GUI.h"
    "include/samp/InputHandler.cpp"
    "include/samp/InputHandler.h"
    "include/samp/KeyStuff.cpp"
    "include/samp/KeyStuff.h"
    "include/samp/Packets.h"
    "include/samp/RPC.cpp"
    "include/samp/RPC.h"
    "include/samp/Scripting.cpp"
    "include/samp/Scripting.h"
    "include/samp/Settings.cpp"
    "include/samp/Settings.h"
    "include/samp/SpecialAction.h"
    "include/samp/VehicleSelection.cpp"
    "include/samp/VehicleSelection.h"
)
source_group("Исходные файлы\\include\\samp" FILES ${___include__samp})

set(___include__util
    "include/util/AddressesBase.cpp"
    "include/util/AddressesBase.h"
    "include/util/BlurEffect.cpp"
    "include/util/BlurEffect.h"
    "include/util/GameUtil.cpp"
    "include/util/GameUtil.h"
    "include/util/ImGuiUtil.cpp"
    "include/util/ImGuiUtil.h"
    "include/util/KeyFilter.cpp"
    "include/util/KeyFilter.h"
    "include/util/Logger.cpp"
    "include/util/Logger.h"
    "include/util/Memory.hpp"
    "include/util/Path.cpp"
    "include/util/Path.h"
    "include/util/RakNet.cpp"
    "include/util/RakNet.h"
    "include/util/Render.cpp"
    "include/util/Render.h"
    "include/util/Resource.cpp"
    "include/util/Resource.h"
    "include/util/Samp.cpp"
    "include/util/Samp.h"
    "include/util/Texture.cpp"
    "include/util/Texture.h"
    "include/util/Timer.cpp"
    "include/util/Timer.h"
)
source_group("Исходные файлы\\include\\util" FILES ${___include__util})

set(___resources
    "resources/resource.aps"
    "resources/resource.h"
)
source_group("Исходные файлы\\resources" FILES ${___resources})

set(___source
    "Header.h"
    "main.cpp"
    "Plugin.cpp"
    "Plugin.h"
)
source_group("Исходные файлы\\source" FILES ${___source})

set(___source__audio
    "Playback.cpp"
    "Playback.h"
    "Record.cpp"
    "Record.h"
)
source_group("Исходные файлы\\source\\audio" FILES ${___source__audio})

set(___source__audio__streams
    "GlobalStream.cpp"
    "GlobalStream.h"
    "LocalStream.cpp"
    "LocalStream.h"
    "StreamAtObject.cpp"
    "StreamAtObject.h"
    "StreamAtPlayer.cpp"
    "StreamAtPlayer.h"
    "StreamAtPoint.cpp"
    "StreamAtPoint.h"
    "StreamAtVehicle.cpp"
    "StreamAtVehicle.h"
)
source_group("Исходные файлы\\source\\audio\\streams" FILES ${___source__audio__streams})

set(___source__audio__streams__core
    "Channel.cpp"
    "Channel.h"
    "Stream.cpp"
    "Stream.h"
    "StreamInfo.cpp"
    "StreamInfo.h"
)
source_group("Исходные файлы\\source\\audio\\streams\\core" FILES ${___source__audio__streams__core})

set(___source__audio__streams__effects
    "Effect.cpp"
    "Effect.h"
)
source_group("Исходные файлы\\source\\audio\\streams\\effects" FILES ${___source__audio__streams__effects})

set(___source__audio__streams__parameters
    "Parameter.cpp"
    "Parameter.h"
    "SetController.cpp"
    "SetController.h"
    "SlideController.cpp"
    "SlideController.h"
)
source_group("Исходные файлы\\source\\audio\\streams\\parameters" FILES ${___source__audio__streams__parameters})

set(___source__config
    "BlackList.cpp"
    "BlackList.h"
    "PluginConfig.cpp"
    "PluginConfig.h"
)
source_group("Исходные файлы\\source\\config" FILES ${___source__config})

set(___source__gui
    "MicroIcon.cpp"
    "MicroIcon.h"
    "PluginMenu.cpp"
    "PluginMenu.h"
    "SpeakerList.cpp"
    "SpeakerList.h"
)
source_group("Исходные файлы\\source\\gui" FILES ${___source__gui})

set(___source__network
    "ControlPacket.cpp"
    "ControlPacket.h"
    "Network.cpp"
    "Network.h"
    "VoicePacket.cpp"
    "VoicePacket.h"
)
source_group("Исходные файлы\\source\\network" FILES ${___source__network})

set(ALL_FILES
    ${___include}
    ${___include__audio}
    ${___include__game}
    ${___include__game__rw}
    ${___include__imgui}
    ${___include__raknet}
    ${___include__samp}
    ${___include__util}
    ${___resources}
    ${___source}
    ${___source__audio}
    ${___source__audio__streams}
    ${___source__audio__streams__core}
    ${___source__audio__streams__effects}
    ${___source__audio__streams__parameters}
    ${___source__config}
    ${___source__gui}
    ${___source__network}
)

################################################################################
# Target
################################################################################
add_library(${PROJECT_NAME} SHARED ${ALL_FILES})

use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
set(ROOT_NAMESPACE client)

################################################################################
# Target name
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    TARGET_NAME_RELEASE "sampvoice"
)
################################################################################
# Output directory
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/"
)
set_target_properties(${PROJECT_NAME} PROPERTIES
    INTERPROCEDURAL_OPTIMIZATION         "TRUE"
)
################################################################################
# Include directories
################################################################################
target_include_directories(${PROJECT_NAME} PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

################################################################################
# Compile definitions
################################################################################
target_compile_definitions(${PROJECT_NAME} PRIVATE
    "_WINDLL;"
    "NDEBUG;"
    "_MBCS"
)

################################################################################
# Compile and link options
################################################################################
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        /std:c++17;
        /Oi;
        /sdl-;
        /GF;
        /w;
        ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
        /Ot;
        ${DEFAULT_CXX_EXCEPTION_HANDLING}
    )
    target_link_options(${PROJECT_NAME} PRIVATE
        /SUBSYSTEM:WINDOWS
    )
endif()

target_link_directories(${PROJECT_NAME} PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/libraries"
)

